# esimRAG

./: pyproject.toml  requirements.txt
config/: __init__.py  settings.py
run/: run_parser.py  transform_error.py
src/: __init__.py
src/builder/: __init__.py  knowledge_object_builder.py
src/error_transformer/: __init__.py  llm_client.py  models.py  pipeline.py  prompts.py  retriever.py
src/extractor/: __init__.py  entity_extractor.py  models.py  relationship_extractor.py  requirement_extractor.py  section_extractor.py  table_extractor.py
src/indexing/: __init__.py  error_transformer.py  hybrid_index.py  vector_index.py
src/indexing/builder/: knowledge_object_builder.py
src/indexing/extractor/: entity_extractor.py  relationship_extractor.py  requirement_extractor.py  section_extractor.py  table_extractor.py
src/indexing/parser/: pdf_parser.py
src/parser/: __init__.py  pdf_parser.py
src/search_index/: __init__.py  _metadata.py  embedder.py  hybrid_index.py  models.py  tokenizer.py  vector_index.py
tests/: run_parser.py  transform_error.py
